Fix main menu issues with small viewports
* Fix height, so bottom of menu will not be truncated.
* Move top padding to inner element to avoid scrollbar appearing smaller
  than the main menu.

--- a/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/mainmenu.scss
+++ b/console-web/webapp/src/main/resources/VAADIN/themes/openthinclient/mainmenu.scss
@@ -2,10 +2,13 @@
   #mainmenu {
     border: none;
     margin-top: $header-height;
-    padding-top: 19px;
-    height: 100%;
+    height: calc(100% - 100px);
     color: #fff;
     box-shadow: 0px 1px 5px #ececec;
+
+    > :first-child {
+      padding-top: 19px;
+    }
 
     // logo
     &::before {
